<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/large_triangles"
    android:orientation="vertical">

    <TextView
        android:id="@+id/facturatext"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/facturatext"
        android:textAlignment="center"
        android:layout_margin="25dp"
        android:textColor="@color/material_dynamic_neutral_variant80"
        android:textSize="48dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/large_triangles">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <!-- Encabezados de la tabla -->
            <TableRow>

                <TextView
                    android:id="@+id/txt_detalles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#CDDC39"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/txt_detalles"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#CDDC39"
                    android:padding="5dp"
                    android:text="@string/title_activity_precio"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>

            <!-- Datos de la lista de precios -->

            <TableRow>

                <TextView
                    android:id="@+id/hab_pq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/hab_pq"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_8"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/hab_med"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/hab_med"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_7"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/hab_grande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/hab_grande"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_6"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/txt_act"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_act"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_5"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/txt_comida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_comida"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_4"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/txt_exc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_exc"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_3"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/txt_parq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_parq"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_2"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/txt_vip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_vip"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="#FCFEFF"
                    android:text="$500"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/txt_ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_ad"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />

                <TextView
                    android:id="@+id/txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FCFEFF"
                    android:padding="5dp"
                    android:text="@string/txt_1"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="#FCFEFF"
                    android:text="IVA"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="#FCFEFF"
                    android:text="$200"
                    android:textAlignment="center"
                    android:textColor="@color/material_dynamic_neutral10"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/texto"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif"
        android:text="@string/texto"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral_variant80"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_menu"
            android:layout_width="237dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/material_dynamic_tertiary100"
            android:text="@string/button_menu"
            android:textColor="@color/material_dynamic_neutral10" />

        <Button
            android:id="@+id/button_pagar"
            android:layout_width="237dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/material_dynamic_tertiary100"
            android:text="@string/button_pagar"
            android:textColor="@color/material_dynamic_neutral10" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="29dp"
        android:layout_gravity="center"
        android:layout_margin="95dp"
        android:text="© 2024 JuanFelipe017™All Rights Reserved."
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral_variant80" />
</LinearLayout>